fix UI issue on smaller screens by reducing the font size on tooltip

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -99,5 +99,6 @@ span {
 @media screen and (max-width: 600px) {
     .tooltip .tooltiptext {
         padding: 3px 6px;
+        font-size: 0.8rem;
     }
 }
